--- a/src/blocks/form/__container/form__container.css
+++ b/src/blocks/form/__container/form__container.css
@@ -1,9 +1,16 @@
 .form__container {
   position: relative;
-  max-width: 358px;
-  margin: 0 auto 0 auto;
-  display: flex;
-  flex-direction: column;
+  width: 430px;
+  height: 330px;
+  background: #fff;
+  border: 0;
+  border-radius: 10px;
+  margin: 0 auto;
+  padding-top: 37px;
+  z-index: 3;
+  opacity: 1;
+
+
 }
 
 @media (max-width: 580px) {
