--- a/src/blocks/form/form.css
+++ b/src/blocks/form/form.css
@@ -1,13 +1,9 @@
 .form {
-  width: 430px;
-  height: 330px;
-  background: #fff;
-  border: 0;
-  border-radius: 10px;
-  margin: 0 auto;
-  padding-top: 37px;
-  z-index: 3;
-  opacity: 1;
+  position: relative;
+  max-width: 358px;
+  margin: 0 auto 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 
 @media (max-width: 580px) {
