--- a/src/blocks/profile/__avatar/_image/profile__avatar-image.css
+++ b/src/blocks/profile/__avatar/_image/profile__avatar-image.css
@@ -2,7 +2,9 @@
   border-radius: 50%;
   width: 120px;
   height: 120px;
+  cursor: pointer;
 }
+
 
 @media (max-width: 700px) {
   .profile__avatar-image {
