--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,6 +1,3 @@
-.profile__avatar:hover {
-  background: rgba(0, 0, 0, 0.8);
-  background-image: url(../../../images/pencil_avatar.svg);
-  background-repeat: no-repeat;
-  background-position: center;
+.profile__avatar {
+  position: relative;
 }
