--- a/src/blocks/form/__item/form__item.css
+++ b/src/blocks/form/__item/form__item.css
@@ -1,6 +1,8 @@
 .form__item {
   box-sizing: border-box;
   border: 0;
+  margin-bottom: 3px;
+  margin-bottom: 4px;
   border-bottom: 1px solid #bcbcc4;
   width: 100%;
   height: 27px;
