v 8.1 corrections as per Sergey's comments

--- a/src/blocks/profile/__avatar-overlay/profile__avatar-overlay.css
+++ b/src/blocks/profile/__avatar-overlay/profile__avatar-overlay.css
@@ -1,10 +1,13 @@
 .profile__avatar-overlay {
-  background: none;
   position: absolute;
+  background: none;
   width: 120px;
   height: 120px;
+  margin: auto;
   top: 0;
+  bottom: 0;
   left: 0;
+  right: 0;
   border-radius: 50%;
 }
 
