v 8.1 corrections as per Sergey's comments

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -8,6 +8,7 @@
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/_image/profile__avatar-image.css);
 @import url(../blocks/profile/__avatar-overlay/profile__avatar-overlay.css);
+@import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__info/_header/profile__info_header.css);
 @import url(../blocks/profile/__info/_description/profile__info_description.css);
